--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   # SMS handling
-  flutter_sms_inbox: ^1.0.2
+  easy_sms_receiver: ^0.0.2
+  flutter_background_service: ^5.0.10
 
   # State management
   flutter_bloc: ^8.1.6
@@ -62,6 +63,7 @@ dependencies:
 
   # Internationalization
   intl: ^0.19.0
+  flutter_local_notifications: ^19.4.2
 
 dev_dependencies:
   flutter_test:
