--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ dependencies:
   intl: ^0.19.0
   flutter_local_notifications: ^19.4.2
 
+  # Cryptography for SMS hashing
+  crypto: ^3.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
