--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,15 @@ dependencies:
   # Cryptography for SMS hashing
   crypto: ^3.0.3
 
+  # Firebase
+  firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
+  cloud_firestore: ^5.5.0
+
+  # Local storage
+  shared_preferences: ^2.2.2
+  google_sign_in: 6.2.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
