--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,8 @@ dependencies:
 
   # Local storage
   shared_preferences: ^2.2.2
-  google_sign_in: 6.2.1
+  google_sign_in: ^6.2.1
+  connectivity_plus: ^7.0.0
 
 dev_dependencies:
   flutter_test:
