--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
-        android:label="spending_app"
+        android:label="Track Mate"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
