--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,8 +92,15 @@ dev_dependencies:
   drift_dev: ^2.16.0
   build_runner: ^2.4.9
 
+  flutter_launcher_icons: ^0.13.1
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
 
 # The following section is specific to Flutter packages.
 flutter:
@@ -104,7 +111,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/app-logo.png
     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
